fixed navbar, align rightu :fire:

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3760,13 +3760,6 @@
     height: 100%;
 }
 
-.navbar {
-	display: block;
-	padding: 0;
-	margin: 0;
-	overflow: hidden;
-}
-
 .pretty-af-navbar {
 	position: fixed;
 	display: block;
@@ -3792,8 +3785,8 @@
 
 .pretty-af-navbar li {
 	display: inline-block;
-	padding-left: 15px;
-	padding-right: 15px;
+	padding-left: 10px;
+	padding-right: 10px;
 	padding-top: 3px;
 	padding-bottom: 3px;
 	text-align: center;
@@ -3826,17 +3819,6 @@
 	padding-bottom: 5px;
 	color: #B0B0B0;
 	background-color: #2E3842;
-}
-
-.dropdownee a {
-	display: block;
-	text-align: center;
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	color: #B0B0B0;
-	background-color: rgba(0, 0, 0, 0);
 }
 
 .dropdowner:hover .dropdownee {
